// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`named group Focus only group only Should skip all tests except \`only\` tests within the group 1`] = `
SuiteSummary {
  "errorCount": 4,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 4,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Focus only top level only should skip all tests except \`only\` tests 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 3,
      "errors": [],
      "pendingCount": 0,
      "testCount": 3,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Focus skip inside the group should skip only within the group 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Focus skip inside the group should skip only within the group, not the next group 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Focus skip inside the group skip(true) should skip only within the group 1`] = `
SuiteSummary {
  "errorCount": 5,
  "errors": [
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 5,
  "tests": {
    "f1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Focus skip outside of group Should skip \`skipped\` tests both inside and outside the group 1`] = `
SuiteSummary {
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "f1": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Multiple groups Should run the tests within the groups 1`] = `
SuiteSummary {
  "errorCount": 5,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g2",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g2",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
    "g2": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 7,
  "tests": {
    "f1": {
      "errorCount": 3,
      "errors": [],
      "pendingCount": 0,
      "testCount": 3,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`named group Should run the tests within the group 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f1",
      "groupName": "g1",
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": "g1",
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "f1": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f2": SummaryBase {
        "errorCount": 1,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "f3": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 1,
        "valid": true,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 4,
  "tests": {
    "f1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups Should complete without adding the group to the results object 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups Should run tests normally 1`] = `
SuiteSummary {
  "errorCount": 3,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups With skip(true) Should skip all tests in group 1`] = `
SuiteSummary {
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 0,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups with only Should only run the tests specified by only 1`] = `
SuiteSummary {
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "f1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`unnamed groups with skip Should skip the tests specified by skip 1`] = `
SuiteSummary {
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "f2",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "f3",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "f1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "f3": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
